sas-core/main/default/objects/Proactivity__c/fields/Automate_Matching_Claims__c.field-meta.xml
<CustomField>
    <fullName>Automate_Matching_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automate any claims where the root cause is a flight which matches this proactivity</description>
    <inlineHelpText>Automate any claims where the root cause is a flight which matches this proactivity</inlineHelpText>
    <label>Automate Matching Claims</label>
    <type>Checkbox</type>
</CustomField>