sas-core/main/default/objects/Proactivity__c/fields/Cases_Routed_To_Manual_Handling__c.field-meta.xml
<CustomField>
    <fullName>Cases_Routed_To_Manual_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cases Routed To Manual Handling</label>
    <type>Checkbox</type>
</CustomField>