sas-core/main/default/objects/Proactivity__c/fields/Claims_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Claims_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims On Hold</label>
    <type>Checkbox</type>
</CustomField>