sas-core/main/default/objects/Proactivity__c/fields/Claims_Taken_Off_Hold__c.field-meta.xml
<CustomField>
    <fullName>Claims_Taken_Off_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Taken Off Hold</label>
    <type>Checkbox</type>
</CustomField>