sas-core/main/default/objects/Proactivity__c/fields/Eligibility_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Explanation__c</fullName>
    <description>The explanation which will be presented to the user in a response email. Will occur in a setnance like &quot;...the flight was delayed/cancelled due to EXPLANATION. This is an event outside SAS control...&quot;. This explanation will only appear in emails where the customer&apos;s claim is denied.</description>
    <inlineHelpText>The explanation which will be presented to the user in a response email. Will occur in a setnance like &quot;...the flight was delayed/cancelled due to EXPLANATION. This is an event outside SAS control...&quot;. This explanation will only appear in emails where the customer&apos;s claim is denied.</inlineHelpText>
    <label>Eligibility Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>