sas-core/main/default/objects/Proactivity__c/fields/EU261_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>EU261_Eligibility__c</fullName>
    <defaultValue>&quot;Tentative&quot;</defaultValue>
    <description>Whether or not a claim with a &quot;root cause&quot;-flight which matches this proactivity should be eligible or not for EU261 compensation.</description>
    <inlineHelpText>Whether or not a claim with a &quot;root cause&quot;-flight which matches this proactivity should be eligible or not for EU261 compensation.</inlineHelpText>
    <label>EU261 Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EU261_Eligibility</valueSetName>
    </valueSet>
</CustomField>